Fix: Remove version tag on mobile layout

--- a/src/renderer/components/HomeToolbar/style.module.css
+++ b/src/renderer/components/HomeToolbar/style.module.css
@@ -200,7 +200,7 @@
 
 /* ---------- Mobile ---------- */
 
-@media screen and (width <= 768px) {
+@media screen and (width <= 650px) {
   .search {
     flex: 1 1 100%;
     min-width: 0;
